force-app/main/default/objects/Financial_Account__c/Financial_Account__c.object-meta.xml
<CustomObject>
    <description>To store the financial account details of Loan and Insurance</description>
    <label>Financial Account</label>
    <nameField>
        <label>Financial Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>