force-app/main/default/objects/Financial_Account__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>