force-app/main/default/objects/Financial_Account__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Loan Amount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>