force-app/main/default/objects/Financial_Account__c/fields/Amount_Available_For_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Amount_Available_For_Disbursement__c</fullName>
    <formula>Sanctioned_Amount__c -  Receivables_Amount__c -  Payable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Available For Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>