force-app/main/default/objects/Financial_Account__c/fields/Amount_Created__c.field-meta.xml
<CustomField>
    <fullName>Amount_Created__c</fullName>
    <label>Amount Created</label>
    <summarizedField>Paybale__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Paybale__c.Status__c</field>
        <operation>equals</operation>
        <value>Accepted By Bank</value>
    </summaryFilterItems>
    <summaryForeignKey>Paybale__c.Financial_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>