force-app/main/default/objects/Financial_Account__c/fields/Amount_Yet_To_Be_Credited__c.field-meta.xml
<CustomField>
    <fullName>Amount_Yet_To_Be_Credited__c</fullName>
    <formula>Sanctioned_Amount__c - Receivables_Amount__c - Amount_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Yet To Be Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>