force-app/main/default/objects/Financial_Account__c/fields/Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name__c</fullName>
    <formula>Account_Name__r.Name</formula>
    <label>Borrower Name</label>
    <type>Text</type>
</CustomField>