force-app/main/default/objects/Financial_Account__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Data Origination/Source unique record identifying id</description>
    <externalId>true</externalId>
    <label>Data Originating External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>