force-app/main/default/objects/Financial_Account__c/fields/First_EMI_Date__c.field-meta.xml
<CustomField>
    <fullName>First_EMI_Date__c</fullName>
    <label>First EMI Date</label>
    <type>Date</type>
</CustomField>