force-app/main/default/objects/Financial_Account__c/fields/Installment__c.field-meta.xml
<CustomField>
    <fullName>Installment__c</fullName>
    <label>Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>