force-app/main/default/objects/Financial_Account__c/fields/Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount__c</fullName>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>