force-app/main/default/objects/Financial_Account__c/fields/Installment_Due_On__c.field-meta.xml
<CustomField>
    <fullName>Installment_Due_On__c</fullName>
    <label>Installment Due On</label>
    <type>Date</type>
</CustomField>