force-app/main/default/objects/Financial_Account__c/fields/LMS_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>LMS_Application_ID__c</fullName>
    <label>LMS Application ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>