force-app/main/default/objects/Financial_Account__c/fields/LMS_System_Name__c.field-meta.xml
<CustomField>
    <fullName>LMS_System_Name__c</fullName>
    <description>contains the Name of the System where the the LMS data exists</description>
    <label>LMS System Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Originating_System</valueSetName>
    </valueSet>
</CustomField>