force-app/main/default/objects/Financial_Account__c/fields/Loan_Category__c.field-meta.xml
<CustomField>
    <fullName>Loan_Category__c</fullName>
    <description>Loan Categoty / Loan Type</description>
    <label>Loan Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loan_Category</valueSetName>
    </valueSet>
</CustomField>