force-app/main/default/objects/Financial_Account__c/fields/Loan_Closure_Required__c.field-meta.xml
<CustomField>
    <fullName>Loan_Closure_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean to check if the previous loan of the applicants are required to be closed</description>
    <label>Loan Closure Required</label>
    <type>Checkbox</type>
</CustomField>