force-app/main/default/objects/Financial_Account__c/fields/LOS_System_Name__c.field-meta.xml
<CustomField>
    <fullName>LOS_System_Name__c</fullName>
    <label>LOS System Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Originating_System</valueSetName>
    </valueSet>
</CustomField>