force-app/main/default/objects/Financial_Account__c/fields/LOS_URL_ID__c.field-meta.xml
<CustomField>
    <fullName>LOS_URL_ID__c</fullName>
    <label>LOS URL ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>