force-app/main/default/objects/Financial_Account__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>