force-app/main/default/objects/Financial_Account__c/fields/Originating_Branch__c.field-meta.xml
<CustomField>
    <fullName>Originating_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Branch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts (Originating Branch)</relationshipLabel>
    <relationshipName>Financial_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>