force-app/main/default/objects/Financial_Account__c/fields/Originating_System__c.field-meta.xml
<CustomField>
    <fullName>Originating_System__c</fullName>
    <description>Data Origination/Source system Name</description>
    <label>Data Originating System Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Originating_System</valueSetName>
    </valueSet>
</CustomField>