force-app/main/default/objects/Financial_Account__c/fields/Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payable_Amount__c</fullName>
    <label>Payable Amount</label>
    <summarizedField>Paybale__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Paybale__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Paybale__c.Financial_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>