force-app/main/default/objects/Financial_Account__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>