force-app/main/default/objects/Financial_Account__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>Text( Product__r.Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>