force-app/main/default/objects/Financial_Account__c/fields/Rate_Of_Intrest__c.field-meta.xml
<CustomField>
    <fullName>Rate_Of_Intrest__c</fullName>
    <label>Rate Of Intrest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>