force-app/main/default/objects/Financial_Account__c/fields/Receivables_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receivables_Amount__c</fullName>
    <label>Receivables Amount</label>
    <summarizedField>Receivable__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receivable__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receivable__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Failed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receivable__c.Mode__c</field>
        <operation>equals</operation>
        <value>Deduction at Source</value>
    </summaryFilterItems>
    <summaryForeignKey>Receivable__c.Financial_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>