force-app/main/default/objects/Financial_Account__c/fields/Tenuer__c.field-meta.xml
<CustomField>
    <fullName>Tenuer__c</fullName>
    <label>Tenuer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>