force-app/main/default/objects/Financial_Account__c/recordTypes/Business_Team_LAP.recordType-meta.xml
<RecordType>
    <fullName>Business_Team_LAP</fullName>
    <active>true</active>
    <label>Business Team LAP</label>
</RecordType>