force-app/main/default/objects/Financial_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LMS_Application_ID__c</columns>
    <columns>LOS_Application_ID__c</columns>
    <columns>Loan_Category__c</columns>
    <columns>Originating_Branch__c</columns>
    <columns>Amount_Yet_To_Be_Credited__c</columns>
    <columns>Amount_Created__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>